src/surface/card/compiler/snapshots/synrepo__surface__card__compiler__tests__symbol_card_tiny.snap
---
source: src/surface/card/compiler/tests.rs
expression: tiny
---
{
  "symbol": 5559367378525914440,
  "name": "add",
  "qualified_name": "add",
  "defined_at": "src/lib.rs:31",
  "signature": "pub fn add(a: i32, b: i32) -> i32",
  "doc_comment": null,
  "callers": [],
  "callees": [],
  "tests_touching": [],
  "last_change": null,
  "drift_flag": null,
  "source_body": null,
  "approx_tokens": 13,
  "source_store": "graph",
  "epistemic": "parser_observed",
  "overlay_commentary": null,
  "commentary_state": "budget_withheld"
}
